--- a/App/package.json
+++ b/App/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "android":"ng build && npx cap copy android && npx cap sync android && npx  cap open android",
+    "android": "ng build && npx cap copy android && npx cap sync android && npx  cap open android",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -31,6 +31,7 @@
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
