--- a/App/android/app/capacitor.build.gradle
+++ b/App/android/app/capacitor.build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation project(':capacitor-haptics')
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-status-bar')
+    implementation project(':capacitor-push-notifications')
+    implementation project(':capacitor-local-notifications')
 
 }
 
