--- a/App/package.json
+++ b/App/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor/android": "^5.7.2",
+    "@capacitor/android": "5.7.2",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.2",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/local-notifications": "^5.0.0",
     "@ionic/angular": "^7.0.0",
     "country-state-city": "^3.2.1",
     "ionic-selectable": "^5.0.0",
