--- a/App/package.json
+++ b/App/package.json
@@ -29,6 +29,7 @@
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/local-notifications": "^5.0.0",
     "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/camera": "^5.0.9",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
     "country-state-city": "^3.2.1",
