--- a/App/package.json
+++ b/App/package.json
@@ -24,20 +24,22 @@
     "@angular/router": "^17.0.2",
     "@capacitor/android": "5.7.2",
     "@capacitor/app": "5.0.7",
+    "@capacitor/camera": "^5.0.9",
     "@capacitor/core": "5.7.2",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/local-notifications": "^5.0.0",
     "@capacitor/push-notifications": "^5.0.0",
-    "@capacitor/camera": "^5.0.9",
     "@capacitor/status-bar": "5.0.7",
+    "@ionic/angular": "^7.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "@ionic/angular": "^7.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "country-state-city": "^3.2.1",
     "ionic-selectable": "^5.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "swiper": "^11.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
